simple-lab/ingress-labs/02-host-based-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-routing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
  - host: hello.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 5000
  - host: info.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: info-service
            port:
              number: 5001
  - host: hello-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 5000
  - host: info-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: info-service
            port:
              number: 5001
